Refactor UI components and JS interop
- In Buttons.razor, simplified button testing components by removing multiple instances and adding headings for different render modes. Removed unused TnTNavLink components.
- Updated TnTAccordion.razor, TnTFabButton.razor, and others to use @PageScript instead of @RenderPageScript() for JavaScript module loading.
- Major updates to TnTButton.razor and TnTButton.razor.cs, including changing inheritance, implementing ITnTStyleable, modifying button attributes, and streamlining properties to enhance customization and interactivity.
- Introduced TnTInteractablePageScriptComponent.cs as a new base class for interactable components, supporting enhanced JavaScript interop and lifecycle management.
- Refactored JavaScript in TnTComponents.lib.module.js to improve the ripple effect setup and usage across components.
- Adjusted _colors.scss to refine disabled state styling without affecting progress elements.

--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -3,21 +3,13 @@
 
 
 <LiveTest.Client.Components.ButtonsTesting />
-@*
-<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveServer" />
-<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveWebAssembly" />
-<LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveAuto" />
-*@
+<h3>
+    WASM
+</h3>
+<LiveTest.Client.Components.ButtonsTesting @rendermode="InteractiveWebAssembly" />
 
-<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.None">
-    Appearance None
-</TnTNavLink>
-<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Outlined">
-    Appearance Outlined
-</TnTNavLink>
-<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Flat">
-    Appearance Flat
-</TnTNavLink>
-<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Underlined">
-    Appearance Underlined
-</TnTNavLink>
+<h3>
+    Server
+</h3>
+<LiveTest.Client.Components.ButtonsTesting @rendermode="InteractiveServer" />
+
