--- a/TnTComponents/Buttons/TnTFabButton.razor
+++ b/TnTComponents/Buttons/TnTFabButton.razor
@@ -8,11 +8,10 @@
     class="@ElementClass"
     style="@ElementStyle"
     name="@Name"
-    type="@Type.ToHtmlType()"
     disabled="@Disabled"
     autofocus="@AutoFocus"
     @onclick="OnClick">
     @ChildContent
 </button>
 
-@RenderPageScript()
+@PageScript
