--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -8,7 +8,6 @@
         class="@ElementClass"
         style="@ElementStyle"
         name="@Name"
-        type="@Type.ToHtmlType()"
         disabled="@Disabled"
         autofocus="@AutoFocus"
         @onclick="OnClick"
@@ -16,4 +15,4 @@
     @Icon.Render()
 </button>
 
-@RenderPageScript()
+@PageScript
