Enhanced TnTButton with new features
- In `ButtonsTesting.razor`, added `OnClickCallback` to `<TnTButton>` elements and defined the `OnClick` method for logging button clicks.
- Updated `TnTButton.razor` to include new directives for click event handling and element reference.
- Introduced new `[Parameter]` properties in `TnTButton.razor.cs` for event callback and click event propagation control.
- Removed extensive SCSS styling from `_buttons.scss`, indicating a major styling approach change.

--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -2,136 +2,143 @@
 <TnTRow>
     <TnTColumn S="12">
 
-        <TnTButton Appearance="ButtonAppearance.Filled">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
             Filled
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             Outlined
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             Text
         </TnTButton>
 
-        <TnTButton Elevation="0">
+        <TnTButton OnClickCallback="@OnClick" Elevation="0">
             Elevation 0
         </TnTButton>
 
-        <TnTButton Elevation="2">
+        <TnTButton OnClickCallback="@OnClick" Elevation="2">
             Elevation 2
         </TnTButton>
 
-        <TnTButton Elevation="5">
+        <TnTButton OnClickCallback="@OnClick" Elevation="5">
             Elevation 5
         </TnTButton>
 
-        <TnTButton Elevation="10">
+        <TnTButton OnClickCallback="@OnClick" Elevation="10">
             Elevation 10
         </TnTButton>
 
-        <TnTButton BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
+        <TnTButton OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
             CornerRadius 0
         </TnTButton>
 
-        <TnTButton BorderRadius="new TnTComponents.Core.TnTBorderRadius(10)">
+        <TnTButton OnClickCallback="@OnClick" BorderRadius="new TnTComponents.Core.TnTBorderRadius(10)">
             CornerRadius 10
         </TnTButton>
 
-        <TnTButton Disabled="true">
+        <TnTButton OnClickCallback="@OnClick" Disabled="true">
             Disabled
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <MaterialIcon Icon="@MaterialIcon.Abc" />
             StartIcon
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <MaterialIcon Icon="@MaterialIcon.Abc" />
             Both
             <MaterialIcon Icon="@MaterialIcon.ZoomOutMap" />
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             EndIcon
             <MaterialIcon Icon="@MaterialIcon.ZoomOutMap" />
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" />
             Progress Ring
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" />
             Progress Linear
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" Value="50" />
             Progress Ring 50%
         </TnTButton>
 
-        <TnTButton>
+        <TnTButton OnClickCallback="@OnClick">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" Value="50" />
             Progress Linear 50%
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" />
             Outline With Progress Ring
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" />
             Outline With  Progress Linear
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" Value="50" />
             Outline With Progress Ring 50%
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" Value="50" />
             Outline With Progress Linear 50%
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" />
             Text With Progress Ring
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" />
             Text With Progress Linear
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Ring" Value="50" />
             Text With Progress Ring 50%
         </TnTButton>
 
-        <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
+        <TnTButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Text" TextColor="TnTColor.Primary">
             <TnTProgressIndicator Appearance="ProgressAppearance.Linear" Value="50" />
             Text With Progress Linear 50%
         </TnTButton>
 
-        <TnTButton TextAlignment="TextAlign.Left">
+        <TnTButton OnClickCallback="@OnClick" TextAlignment="TextAlign.Left">
             Left
         </TnTButton>
 
-        <TnTButton TextAlignment="TextAlign.Right">
+        <TnTButton OnClickCallback="@OnClick" TextAlignment="TextAlign.Right">
             Right
         </TnTButton>
 
-        <TnTButton BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TintColor="TnTColor.Secondary">
+        <TnTButton OnClickCallback="@OnClick" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TintColor="TnTColor.Secondary">
             Colored
         </TnTButton>
 
-        <TnTButton BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
+        <TnTButton OnClickCallback="@OnClick" BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
             Obscure Radius
         </TnTButton>
     </TnTColumn>
 </TnTRow>
+
+
+@code {
+    private void OnClick() {
+        Console.WriteLine("Button Clicked");
+    }
+}
