Enhance accordion component and styling
This commit significantly refactors and enhances the accordion component, updates navigation in MainLayout.razor, and improves styling across various components. Key changes include the transition to using `<TnTAccordionChild>` for a more dynamic accordion structure, the introduction of the `LimitToOneExpanded` attribute for better user experience, and styling adjustments in `_accordion.scss` to match the updated component structure. Additionally, navigation has been updated to reflect feature prioritization. The removal of JavaScript interactivity in favor of Blazor-centric handling marks a shift towards more integrated component behavior. Further, adjustments in `_colors.scss` and `_ripple.scss` enhance the visual appeal and functionality of progress components and ripple effects, respectively. JavaScript enhancements include improved ripple effect initialization and new accordion toggle functionality, promoting a more interactive user experience. Code cleanup and optimization across the board contribute to a more maintainable and efficient codebase.

--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -81,7 +81,7 @@ $color-classes-no-transparent: black, white, primary, surface-tint, on-primary, 
         &.tnt-filled {
             background-color: var(--tnt-color-#{$colorClass});
 
-            &:has(> progress.tnt-components) {
+            &.tnt-disabled:has(> progress.tnt-components) {
                 background-color: color-mix(in srgb, var(--tnt-color-#{$colorClass}) 40%, transparent);
 
                 & > progress.tnt-components {
