--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,12 +17,34 @@
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
             Home
         </TnTSideNavMenuLink>
-        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.PermContactCalendar))" Href="/scheduler" Match="NavLinkMatch.All" Status="100">
-            Scheduler
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" Href="/accordion">
+            Accordion
         </TnTSideNavMenuLink>
+
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Error))" Href="/Buttons">
             Buttons
         </TnTSideNavMenuLink>    
+       
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.PermContactCalendar))" Href="/scheduler" Match="NavLinkMatch.All" Status="100">
+            Scheduler
+        </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MarkAsUnread))" Href="/Markdown">
             Markdown
         </TnTSideNavMenuLink>
