--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -1,17 +1,54 @@
 ﻿@using TnTComponents.Core
 @inherits TnTPageScriptComponent<TnTAccordion>
 @namespace TnTComponents
+<CascadingValue IsFixed="true" Value="this">
+    <div @attributes="AdditionalAttributes"
+         class="@ElementClass"
+         style="@ElementStyle"
+         title="@ElementTitle"
+         id="@ElementId"
+         lang="@ElementLang"
+         autofocus="@AutoFocus"
+         tnt-one-expanded="@LimitToOneExpanded"
+         @ref="Element">
+        <DeferRendering>
+            @{
 
-<tnt-accordion @attributes="AdditionalAttributes" style="@ElementStyle" @ref="Element">
-    <h3 class="@ElementClass" >
-        @Title
-        <MaterialIcon Icon="@MaterialIcon.ArrowDropDown"/>
-    </h3>
-    <div class="@(CssClassBuilder.Create().AddBackgroundColor(BodyBackgroundColor).AddForegroundColor(BodyTextColor).AddClass("tnt-visible", OpenByDefault).Build())" tnt-open-by-default="@OpenByDefault">
-        <div>
-            @ChildContent
-        </div>
+                var headerBuilder = CssClassBuilder.Create()
+                    .AddClass("tnt-accordion-header")
+                    .AddRipple()
+                    .AddBackgroundColor(HeaderBodyColor)
+                    .AddForegroundColor(HeaderTextColor)
+                    .AddTintColor(HeaderTintColor)
+                    .AddFilled();
+
+                var contentBuilder = CssClassBuilder.Create()
+                    .AddClass("tnt-accordion-content")
+                    .AddBackgroundColor(ContentBodyColor)
+                    .AddForegroundColor(ContentTextColor)
+                    .AddFilled();
+
+                var foundExpanded = false;
+                @foreach (var child in _children) {
+                    <div class="tnt-accordion-child">
+                        <div class="@(headerBuilder.AddTnTInteractable(child).Build())"
+                             onclick="TnTComponents.toggleAccordion(event)">
+                            <h3>
+                                @child.Title
+                            </h3>
+                            <MaterialIcon Icon="@MaterialIcon.ArrowDropDown" />
+                        </div>
+                        <div class="@(contentBuilder.AddClass("tnt-hidden", !child.OpenByDefault || (LimitToOneExpanded && foundExpanded)).Build())">
+                            @child.ChildContent
+                        </div>
+                    </div>
+
+                    if (child.OpenByDefault) {
+                        foundExpanded = true;
+                    }
+                }
+            }
+        </DeferRendering>
+        @ChildContent
     </div>
-</tnt-accordion>
-
-@PageScript
+</CascadingValue>
