Add FabButtons component and update button references
- Updated `FabButtonsComponent.razor` to include a new button that logs "Button Clicked" to the console.
- Modified `Buttons.razor` to replace `ButtonsTesting` with `ButtonsComponent` for all render modes.
- Added a new page `FabButtons.razor` to display the `FabButtonsComponent`.

--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -2,14 +2,14 @@
 @using TnTComponents
 
 
-<LiveTest.Client.Components.ButtonsTesting />
+<LiveTest.Client.Components.ButtonsComponent />
 <h3>
     WASM
 </h3>
-<LiveTest.Client.Components.ButtonsTesting @rendermode="InteractiveWebAssembly" />
+<LiveTest.Client.Components.ButtonsComponent @rendermode="InteractiveWebAssembly" />
 
 <h3>
     Server
 </h3>
-<LiveTest.Client.Components.ButtonsTesting @rendermode="InteractiveServer" />
+<LiveTest.Client.Components.ButtonsComponent @rendermode="InteractiveServer" />
 
