Refactor button components and update Visual Studio version
Refactored FabButtonsComponent to include new TnTFabButton elements with various appearances and content. Updated TnTButton to allow overriding Elevation and BorderRadius properties. Introduced new TnTFabButton and TnTImageButton classes, replacing previous implementations. Updated TnTDialog and TnTSnackbar parameter names for close button events. Added new styles for tnt-fab class in _buttons.scss. Updated solution file to Visual Studio version 17.8.34004.107.

--- a/LiveTest/LiveTest.Client/Components/FabButtonsComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/FabButtonsComponent.razor
@@ -1,13 +1,25 @@
 ﻿@using TnTComponents
-<TnTRow>
-    <TnTColumn S="12">
-        <TnTFabButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
-            Filled
-        </TnTFabButton>
-    </TnTColumn>
-</TnTRow>
+<TnTFabButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
+    Filled
+</TnTFabButton>
+<TnTFabButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Outlined" TextColor="TnTColor.Primary">
+    Outlined
+</TnTFabButton>
+<TnTFabButton OnClickCallback="@OnClick" >
+    <MaterialIcon Icon="@MaterialIcon.Abc" />
+</TnTFabButton>
 
+<TnTFabButton OnClickCallback="@OnClick">
+    <MaterialIcon Icon="@MaterialIcon.Abc" />
+    StartIcon
+</TnTFabButton>
 
+<TnTFabButton OnClickCallback="@OnClick">
+    <TnTProgressIndicator Appearance="ProgressAppearance.Ring" />
+    Progress Ring
+</TnTFabButton>
+@*
+*@
 @code {
     private void OnClick() {
         Console.WriteLine("Button Clicked");
