--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -53,3 +53,33 @@
         }
     }
 }
+
+.tnt-components.tnt-fab {
+    position: fixed;
+    bottom: 1rem;
+    transition: 250ms;
+
+    button.tnt-components {
+        height: 3.5rem;
+        min-width: 3.5rem;
+        padding: 0.5rem;
+    }
+
+    .tnt-icon {
+        font-size: 2rem;
+    }
+}
+
+
+
+body:has(tnt-footer) {
+    .tnt-components.tnt-fab {
+        bottom: calc($tnt-footer-height + 1rem);
+    }
+
+    @for $i from 1 through 5 {
+        .tnt-components.tnt-fab:nth-child(#{$i}) {
+            right: #{(8 * ($i - 1) + 1)}rem;
+        }
+    }
+}
