--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -1,15 +1,15 @@
-﻿@page "/Buttons"
+﻿@page "/ImageButtons"
 @using TnTComponents
 
 
-<LiveTest.Client.Components.ButtonsComponent />
+<LiveTest.Client.Components.ImageButtons/>
 <h3>
     WASM
 </h3>
-<LiveTest.Client.Components.ButtonsComponent @rendermode="InteractiveWebAssembly" />
+<LiveTest.Client.Components.ImageButtons @rendermode="InteractiveWebAssembly" />
 
 <h3>
     Server
 </h3>
-<LiveTest.Client.Components.ButtonsComponent @rendermode="InteractiveServer" />
+<LiveTest.Client.Components.ImageButtons @rendermode="InteractiveServer" />
 
