Refactor components and update styling
Refactored `TnTCard` to inherit from `TnTComponentBase` and implement `ITnTStyleable`, adding new parameters like `Appearance`, `TextAlignment`, and `BackgroundColor`. Updated `CardTesting.razor` to remove `Direction` and `AlignContent` parameters and add `Appearance`, `BackgroundColor`, and `TextColor`. Modified `TnTButton.razor.cs` to override `TintColor` and remove `EnableRipple`. Updated `CssClassBuilder` to handle `EnableRipple` and `TintColor` properties. Adjusted `TnTInteractableComponentBase`, `TnTInteractablePageScriptComponent`, and `TnTSideNavMenuGroup` to include `EnableRipple` and `TintColor`. Updated `ITnTInteractable` and `ITnTStyleable` interfaces accordingly. Added new CSS rule for `tnt-body` class in `style.scss`.

--- a/LiveTest/LiveTest.Client/Components/CardTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/CardTesting.razor
@@ -2,7 +2,7 @@
 <TnTRow>
     <TnTColumn L="3" M="6" S="12">
         <TnTContainer>
-            <TnTComponents.TnTCard Direction="LayoutDirection.Vertical">
+            <TnTComponents.TnTCard>
                 <div>
                     Some Content
                 </div>
@@ -28,7 +28,7 @@
 </TnTRow>
 <TnTDivider />
 
-<TnTComponents.TnTCard Direction="LayoutDirection.Vertical" MakeOutlined="true" Elevation="0">
+<TnTComponents.TnTCard Elevation="0">
     <div>
         Some Content
     </div>
@@ -48,7 +48,7 @@
         Some Content
     </div>
 </TnTComponents.TnTCard>
-<TnTComponents.TnTCard Direction="LayoutDirection.Horizontal" Elevation="5">
+<TnTComponents.TnTCard Elevation="5" BackgroundColor="TnTColor.Tertiary" TextColor="TnTColor.OnTertiary">
     <div>
         Some Content
     </div>
@@ -69,7 +69,7 @@
     </div>
 </TnTComponents.TnTCard>
 
-<TnTComponents.TnTCard Direction="LayoutDirection.Vertical" AlignContent="AlignContent.Center">
+<TnTComponents.TnTCard Appearance="CardAppearance.Outlined" Elevation="0">
     <div>
         Some Content
     </div>
