--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -104,3 +104,11 @@ tnt-theme-toggle {
         }
     }
 }
+
+tnt-body {
+    .editor-toolbar {
+        i.fa {
+            color: $tnt-color-on-surface;
+        }
+    }
+}
