--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -1,19 +1,7 @@
 ﻿@page "/Forms"
 
 
-<LiveTest.Client.Components.InputTesting />
-
-<TnTComponents.TnTInputSelect @bind-Value="value" Placeholder="Number">
-    <option value="One">
-        One
-    </option>
-    <option value="two">
-        Two
-    </option>
-    <option value="threww">
-        Three
-    </option>
-</TnTComponents.TnTInputSelect>
+<LiveTest.Client.Components.FormTesting />
 
 
 @code {
