--- a/TnTComponents/Styles/TnTComponents/_border-radius.scss
+++ b/TnTComponents/Styles/TnTComponents/_border-radius.scss
@@ -1,29 +1,29 @@
 ﻿@for $i from 0 through 10 {
-    .tnt-corner-radius-#{$i} {
+    .tnt-border-radius-#{$i} {
         border-radius: $i * 4px;
     }
 }
 
 @for $i from 0 through 10 {
-    .tnt-corner-radius-start-start-#{$i} {
+    .tnt-border-radius-start-start-#{$i} {
         border-start-start-radius: $i * 4px;
     }
 }
 
 @for $i from 0 through 10 {
-    .tnt-corner-radius-start-end-#{$i} {
+    .tnt-border-radius-start-end-#{$i} {
         border-start-end-radius: $i * 4px;
     }
 }
 
 @for $i from 0 through 10 {
-    .tnt-corner-radius-end-start-#{$i} {
+    .tnt-border-radius-end-start-#{$i} {
         border-end-start-radius: $i * 4px;
     }
 }
 
 @for $i from 0 through 10 {
-    .tnt-corner-radius-end-end-#{$i} {
+    .tnt-border-radius-end-end-#{$i} {
         border-end-end-radius: $i * 4px;
     }
 }
