--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -100,6 +100,10 @@
     &.tnt-filled {
         border-bottom: 1px solid $tnt-color-outline;
 
+        .tnt-icon, input{
+            transform: translateY(0.5rem);
+        }
+
         &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
             .tnt-label {
                 transform-origin: left;
@@ -108,7 +112,7 @@
 
             &:has(.tnt-start-icon) {
                 .tnt-label {
-                    transform: translateX(2.5rem) translateY(-1rem) scale(0.8);
+                    transform: translateX(2.5rem) translateY(-0.8rem) scale(0.8);
                 }
             }
         }
