Add specialized TnTInputCurrency component
Introduced a new TnTInputCurrency component for handling currency input in FormTesting.razor. Added a Currency property to InputModel and updated InputType enum and InputTypeExt class to support the new type. Modified TnTInputBase to handle currency input and added JavaScript event handlers for formatting. Removed old generic TnTInputCurrency implementation and associated files. Added new JavaScript functions in TnTComponents.lib.module.js for currency validation and formatting.

--- a/LiveTest/LiveTest.Client/Components/FormTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/FormTesting.razor
@@ -85,6 +85,15 @@
             <TnTInputText @bind-Value="@Input.Phone" InputType="TextInputType.Tel" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
         </TnTColumn>
     </TnTRow>
+
+    <TnTRow>
+        <h3>
+            Currency
+        </h3>
+        <TnTColumn S="6">
+            <TnTInputCurrency @bind-Value="@Input.Currency" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
+        </TnTColumn>
+    </TnTRow>
 </TnTForm>
 @Input.Text
 @Input.Integer
@@ -121,6 +130,9 @@
 
         [Phone, Required]
         public string? Phone { get; set; }
+
+        [Required]
+        public decimal? Currency { get; set; }
 
     }
 
